<resources>
    <string name="app_name">Your Тренер</string>
    <string name="Start">старт</string>
    <string name="exit">выход</string>
    <string name="time_default">00</string>
    <string name="pause">пауза</string>
    <string name="start">Начать</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_age">Возраст</string>
    <string name="prompt_weight">Вес</string>
    <string name="prompt_rost">Рост</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="invalid_name">Not a valid username</string>
    <string name="invalid_password">Age must be >0  characters</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save">"Сохранить"</string>
    <string-array name="s_s_ex_name">

        <item> </item>
        <item>1. ПОВОРОТЫ ГОЛОВОЙ</item>
        <item>2. ВРАЩЕНИЕ ЗАПЯСТИЙ</item>
        <item>3. ВРАЩЕНИЕ ЛОКТЕЙ</item>
        <item>4. ВРАЩЕНИЕ ПЛЕЧАМИ</item>
        <item>5. ВРАЩЕНИЕ РУКАМИ</item>
        <item>6. НАКЛОНЫ КОРПУСА</item>
        <item>7. ВРАЩЕНИЕ ТАЗОМ</item>
        <item>8. ВРАЩЕНИЕ БЕДРАМИ</item>
        <item>9. ВРАЩЕНИЕ КОЛЕНЯМИ</item>
        <item>10. ВРАЩЕНИЕ СТОПАМИ</item>
    </string-array>
    <string-array name="s_s_ex_info">
        <item> </item>
        <item>1. Встаньте прямо, руки на поясе. Начните делать наклоны головы: вправо – вперед – влево – вперед. Выполняйте это упражнение в медленном темпе, не делая резких рывков головой.</item>
        <item>2. Согните руки в локтях перед собой и сожмите ладони в кулак. Начните вращать кистями по кругу, хорошо разминая запястья. Вращайте сначала в одну сторону, потом в обратную (по часовой и против часовой стрелки).</item>
        <item>3. Оставьте ладони сложенными в кулак и разведите руки в стороны. Начните вращать предплечьями, разминая локтевые суставы. Вращайте сначала в одну сторону, потом в обратную.</item>
        <item>4. Переходим к разминке плеч. Опустите руки вдоль тела и начните вращать плечами, стараясь описать ими максимальный круг. Вращайте плечами сначала вперед, потом назад.</item>
        <item>5. Оставайтесь в том же положении и начните вращать руками с максимальной амплитудой. Вращайте руками сначала вперед, потом назад.</item>
        <item>6. Переходим к разминке корпуса. Положите руки на пояс и начните выполнять наклоны сначала в одну сторону, потом в другую.</item>
        <item>7. Оставьте руки на поясе и начните вращать тазом по кругу. Разминаем ягодицы, бедра и живот. Не забудьте выполнить вращение сначала в одну сторону, потом в обратную.</item>
        <item>8. Проработаем тазобедренные суставы. Руки лежат на поясе. Поднимите колено и начните вращать ногой. Сначала вращайте правой ногой (в одну сторону, потом в обратную). Затем вращайте левой ногой (в одну сторону, потом в обратную).</item>
        <item>9. Поставьте ноги вместе, наклоните корпус и положите руки на колени. Начните вращать коленями, разогревая коленные суставы.</item>
        <item>10. Снова положите руки на пояс и поднимите колено. Начните вращать стопой, разминая голеностопный сустав. Не забудьте выполнить вращение в одну и другую сторону на каждую ногу.</item>
    </string-array>
    <string-array name="s_l_ex_name">
        <item> </item>
        <item>1. НАКЛОН С ПОДНЯТЫМИ РУКАМИ</item>
        <item>2. НАКЛОН К ПРЯМОЙ НОГЕ </item>
        <item>3. НАКЛОН С ЗАВЕДЕННЫМИ ЗА СПИНУ РУКАМИ</item>
        <item>4. ПОЗА ТРЕУГОЛЬНИКА</item>
        <item>5. РАСТЯЖКА ТРИЦЕПСА</item>
        <item>6. РАСТЯЖКА В СУМО-ПРИСЕДЕ</item>
        <item>7. НАКЛОН В ПОЛУШПАГАТЕ</item>
        <item>8. ПОЗА ГИРЛЯНДЫ</item>
        <item>9. НАКЛОН К ПОЛУ</item>
        <item>10. БОКОВОЙ ВЫПАД</item>
        <item>11. ВЫПАД С РУКАМИ ВВЕРХ</item>
        <item>12. ПОВОРОТ КОРПУСА В ВЫПАДЕ</item>
        <item>13. ГЛУБОКИЙ ВЫПАД С КОЛЕНОМ НА ПОЛУ</item>
        <item>14. ВЫПАД С ЗАХВАТОМ НОГИ</item>
        <item>15. НАКЛОН К НОГЕ СТОЯ НА КОЛЕНЕ</item>
        <item>16. ПОЗА ГОЛУБЯ</item>
        <item>17. ПОЗА ВЕРБЛЮДА (ОБЛЕГЧЕННАЯ)</item>
        <item>18. ПОЗА СОБАКИ МОРДОЙ ВНИЗ</item>
        <item>19. ПОЗА СОБАКИ МОРДОЙ ВВЕРХ</item>
        <item>20. ПОЗА СФИНКСА</item>
        <item>21. НАКЛОН В ПОЗЕ ЛОТОСА</item>
        <item>22. ПОЗА БАБОЧКИ (УПРОЩЕННАЯ)</item>
        <item>23. СКЛАДКА СИДЯ</item>
        <item>24. СИДЯЧАЯ ПОЗА ГОЛУБЯ</item>
        <item>25. ПОВОРОТ КОРПУСА СИДЯ</item>
        <item>26. СКРУЧИВАНИЕ В СПИНЕ</item>
        <item>27. ПОДЪЕМ НОГИ К ГРУДИ</item>
        <item>28. РАСТЯЖКА ЯГОДИЦ ЛЕЖА</item>
        <item>29. ПОЗА СЧАСТЛИВОГО РЕБЕНКА</item>
        <item>30. ПОЗА ВЕТРА</item>
        <item>31. ПОЗА РЕБЕНКА</item>
    </string-array>
</resources>