<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projectKPO.yourtrener.stretching_short">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />
    <WebView
        android:id="@+id/s_s"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />
    <LinearLayout
        android:id="@+id/ex_name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/s_s">
    <TextView
        android:id="@+id/Ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="ПОВОРОТЫ ГОЛОВЫ"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

        <TextView
            android:id="@+id/exinfobutton"

            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_stroke_black95_press_white"
            android:gravity="center"
            android:text="i"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ex_name_info"
        android:text="@string/time_default"
        android:textColor="@android:color/black"
        android:textSize="60sp" />
    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:text="@string/Start" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/exit" />

</RelativeLayout>